<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#05060a" tools:ignore="MissingClass">
    <TextView
            android:text="@string/carpooling_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:autoSizeTextType="uniform" android:textColor="#FFFFFF"
            android:fontFamily="monospace"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="24sp"
            tools:layout_editor_absoluteY="66dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:textAlignment="center" tools:ignore="MissingConstraints"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextText"
            android:hint="Enter ID"
            android:backgroundTint="@color/cardview_dark_background" android:minHeight="48dp"
            android:fontFamily="monospace" android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="128dp"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/Butt_Regis"
            android:background="@drawable/butt_launcher_back" android:textColorHighlight="#009688"
            android:textColorLink="#009688" android:fontFamily="monospace" android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/Butt_Login" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Switch
            android:id="@+id/switchCarpooling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habilitar_carpooling"
            tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
            android:fontFamily="monospace" android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/Butt_Regis" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.0" android:checked="true"/>
    <Button
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/Butt_Login"
            android:background="@drawable/butt_launcher_solid"
            android:textColorHighlight="@color/colorPrimary" android:fontFamily="monospace" android:textSize="16sp"
            android:backgroundTintMode="add"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/black"
            android:shadowColor="@color/colorPrimary"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextName" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTextName"
            android:hint="@string/enter_your_name"
            android:backgroundTint="@color/cardview_dark_background" android:minHeight="48dp"
            android:fontFamily="monospace" android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>


